added some page link

--- a/templates/base.html
+++ b/templates/base.html
@@ -97,10 +97,10 @@
                     <h3>Resources</h3>
                     <ul>
                         <li><a href="{{ url_for('education') }}">E-Waste Education</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="{{ url_for('faq') }}">FAQ</a></li>
+                        <li><a href="{{ url_for('educatio') }}">Blog</a></li>
+                        <li><a href="{{ url_for('educatio') }}">Privacy Policy</a></li>
+                        <li><a href="{{ url_for('terms') }}">Terms of Service</a></li>
                     </ul>
                 </div>
                 
