--- a/templates/base.html
+++ b/templates/base.html
@@ -99,7 +99,7 @@
                         <li><a href="{{ url_for('education') }}">E-Waste Education</a></li>
                         <li><a href="{{ url_for('faq') }}">FAQ</a></li>
                         <li><a href="{{ url_for('educatio') }}">Blog</a></li>
-                        <li><a href="{{ url_for('educatio') }}">Privacy Policy</a></li>
+                        <li><a href="{{ url_for('privacy-policy') }}">Privacy Policy</a></li>
                         <li><a href="{{ url_for('terms') }}">Terms of Service</a></li>
                     </ul>
                 </div>
